Update app configuration and enhance product display

--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.estyleee"
     },
     "web": {
       "bundler": "metro",
